fix alignment of group sort order

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-group-builder.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-group-builder.less
@@ -128,9 +128,7 @@ input.umb-group-builder__group-title-input:disabled:hover {
 }
 
 .umb-group-builder__group-sort-order {
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
+    margin-right: 10px;
     margin-left: auto;
 }
 
